--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Happy Valentine's Day ❤️</title>
-    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/static/css/style.css">
 </head>
-
 <body>
     <div class="hearts-background"></div>
 
@@ -70,7 +69,6 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="/static/js/script.js"></script>
 </body>
-
 </html>
