--- a/templates/memories.html
+++ b/templates/memories.html
@@ -17,15 +17,15 @@
         <div class="photo-gallery">
             <div class="photo-card" data-index="0">
                 <div class="photo-frame">
-                    <div class="photo-placeholder">📸</div>
-                    <div class="polaroid-text">First Date</div>
+                    <div class="photo-placeholder"><img src="/static/images/First time hand hold.jpeg" alt=""></div>
+                    <div class="polaroid-text">First Time Hand pudichathu</div>
                 </div>
                 <p class="photo-caption">The day that changed everything</p>
             </div>
             
             <div class="photo-card" data-index="1">
                 <div class="photo-frame">
-                    <div class="photo-placeholder">📸</div>
+                    <div class="photo-placeholder"><img src="/static/images/First kiss.jpeg" alt=""></div>
                     <div class="polaroid-text">First Kiss</div>
                 </div>
                 <p class="photo-caption">A moment I'll never forget</p>
@@ -33,31 +33,31 @@
             
             <div class="photo-card" data-index="2">
                 <div class="photo-frame">
-                    <div class="photo-placeholder">📸</div>
-                    <div class="polaroid-text">Our Adventures</div>
+                    <div class="photo-placeholder"><img src="/static/images/Kovil outing.jpeg" alt=""></div>
+                    <div class="polaroid-text">Kovil outing</div>
                 </div>
                 <p class="photo-caption">Exploring the world together</p>
             </div>
             
             <div class="photo-card" data-index="3">
                 <div class="photo-frame">
-                    <div class="photo-placeholder">📸</div>
-                    <div class="polaroid-text">Happy Moments</div>
+                    <div class="photo-placeholder"><img src="/static/images/First time outing.jpeg" alt=""></div>
+                    <div class="polaroid-text">Outing First Time</div>
                 </div>
                 <p class="photo-caption">Laughter and joy</p>
             </div>
             
             <div class="photo-card" data-index="4">
                 <div class="photo-frame">
-                    <div class="photo-placeholder">📸</div>
-                    <div class="polaroid-text">Special Occasions</div>
+                    <div class="photo-placeholder"><img src="/static/images/Hug.jpeg" alt=""></div>
+                    <div class="polaroid-text">Hug</div>
                 </div>
                 <p class="photo-caption">Celebrating life together</p>
             </div>
             
             <div class="photo-card" data-index="5">
                 <div class="photo-frame">
-                    <div class="photo-placeholder">📸</div>
+                    <div class="photo-placeholder"><img src="/static/images/SEbi.jpeg" alt=""></div>
                     <div class="polaroid-text">Everyday Magic</div>
                 </div>
                 <p class="photo-caption">The little things that matter</p>
@@ -65,16 +65,16 @@
             
             <div class="photo-card" data-index="6">
                 <div class="photo-frame">
-                    <div class="photo-placeholder">📸</div>
-                    <div class="polaroid-text">Our Love Story</div>
+                    <div class="photo-placeholder"><img src="/static/images/Kundu chlmm.jpeg" alt=""></div>
+                    <div class="polaroid-text">My Kundu Pondatti</div>
                 </div>
                 <p class="photo-caption">Forever and always</p>
             </div>
             
             <div class="photo-card" data-index="7">
                 <div class="photo-frame">
-                    <div class="photo-placeholder">📸</div>
-                    <div class="polaroid-text">Future Dreams</div>
+                    <div class="photo-placeholder"><img src="/static/images/Dream Future.jpeg" alt=""></div>
+                    <div class="polaroid-text">Future Dreams Unkuda Eppovum erukanum</div>
                 </div>
                 <p class="photo-caption">The best is yet to come</p>
             </div>
@@ -82,7 +82,7 @@
         
         <div class="memory-quote">
             <p class="quote-text">"In all the world, there is no heart for me like yours. In all the world, there is no love for you like mine."</p>
-            <p class="quote-author">- Maya Angelou</p>
+            <p class="quote-author">Sanu</p>
         </div>
         
         <div class="navigation-bottom">
