--- a/templates/question.html
+++ b/templates/question.html
@@ -9,7 +9,6 @@
 </head>
 <body>
     <div class="hearts-container"></div>
-    <div class="emojis-container"></div>
     
     <!-- Don't Touch Me Modal -->
     <div class="modal-overlay" id="modalOverlay">
@@ -24,7 +23,7 @@
     <div class="container">
         <div class="teddy-bear" id="teddyBear">🧸</div>
         
-        <h1 class="question">Will You Be My Valentine? 💝</h1>
+        <h1 class="question">Amni Kunchi will you Be My Valentine? 💝</h1>
         
         <div class="bunny-container">
             <span class="bunny">🐰</span>
