--- a/templates/reasons.html
+++ b/templates/reasons.html
@@ -12,7 +12,7 @@
     
     <div class="container">
         <h1 class="page-title">Reasons Why I Love You ❤️</h1>
-        <p class="page-subtitle">Click the heart to reveal another reason 💕</p>
+        <p class="page-subtitle">Pondatti Heart ahh click pannu oru oru answer show agum💕</p>
         
         <div class="reason-display">
             <div class="heart-button" id="heartButton">
@@ -26,8 +26,8 @@
         </div>
         
         <div class="all-reasons-section">
-            <h2>All My Reasons (Click to Reveal All)</h2>
-            <button class="reveal-btn" id="revealBtn">Show All Reasons 💝</button>
+            <h2>All My Reasons (Ellam Pakka)</h2>
+            <button class="reveal-btn" id="revealBtn">Ellam Pakkanuma asaiya paru 😂💝</button>
             
             <div class="reasons-grid" id="reasonsGrid" style="display: none;">
                 {% for reason in reasons %}
