--- a/templates/celebration.html
+++ b/templates/celebration.html
@@ -12,13 +12,13 @@
     <div class="hearts-rain"></div>
     
     <div class="container">
-        <h1 class="celebration-title">🎉 YAY! 🎉</h1>
+        <h1 class="celebration-title">🎉 Yes Amni Kunchi Yes sonna 😄🤭 🎉</h1>
         <div class="emoji-celebration">
             <span class="celebrate-emoji">🧸</span>
             <span class="celebrate-emoji">💕</span>
             <span class="celebrate-emoji">🐰</span>
         </div>
-        <h2 class="message">She Said YES!</h2>
+        <h2 class="message">She said Yes!</h2>
         <p class="subtitle">This is the best day ever! 💝</p>
         
         <div class="dancing-emojis">
@@ -29,7 +29,7 @@
         </div>
         
         <div class="navigation">
-            <h3>Let's continue our journey! ❤️</h3>
+            <h3>Amni kunchi ene kealla erukuratha onnu onna paru! ❤️</h3>
             <div class="nav-buttons">
                 <a href="/love-letter" class="nav-btn">
                     <span class="icon">💌</span>
@@ -41,7 +41,7 @@
                 </a>
                 <a href="/reasons" class="nav-btn">
                     <span class="icon">❤️</span>
-                    <span class="text">Why I Love You</span>
+                    <span class="text">Yathuku nan unna love panna nu therinchikanuma 😆?</span>
                 </a>
             </div>
         </div>
