--- a/templates/memories.html
+++ b/templates/memories.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Memories 📸</title>
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Poppins:wght@400;600;700&family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/static/css/memories.css">
+    <link rel="stylesheet" href="/static/css/memories.css?v=2.0">
 </head>
 <body>
     <div class="floating-hearts"></div>
@@ -17,7 +17,9 @@
         <div class="photo-gallery">
             <div class="photo-card" data-index="0">
                 <div class="photo-frame">
-                    <div class="photo-placeholder"><img src="/static/images/First time hand hold.jpeg" alt=""></div>
+                    <div class="photo-placeholder">
+                        <img src="/static/images/First time hand hold.jpeg" alt="First Time Hand Hold">
+                    </div>
                     <div class="polaroid-text">First Time Hand pudichathu</div>
                 </div>
                 <p class="photo-caption">The day that changed everything</p>
@@ -25,7 +27,9 @@
             
             <div class="photo-card" data-index="1">
                 <div class="photo-frame">
-                    <div class="photo-placeholder"><img src="/static/images/First kiss.jpeg" alt=""></div>
+                    <div class="photo-placeholder">
+                        <img src="/static/images/First kiss.jpeg" alt="First Kiss">
+                    </div>
                     <div class="polaroid-text">First Kiss</div>
                 </div>
                 <p class="photo-caption">A moment I'll never forget</p>
@@ -33,7 +37,9 @@
             
             <div class="photo-card" data-index="2">
                 <div class="photo-frame">
-                    <div class="photo-placeholder"><img src="/static/images/Kovil outing.jpeg" alt=""></div>
+                    <div class="photo-placeholder">
+                        <img src="/static/images/Kovil outing.jpeg" alt="Kovil Outing">
+                    </div>
                     <div class="polaroid-text">Kovil outing</div>
                 </div>
                 <p class="photo-caption">Exploring the world together</p>
@@ -41,7 +47,9 @@
             
             <div class="photo-card" data-index="3">
                 <div class="photo-frame">
-                    <div class="photo-placeholder"><img src="/static/images/First time outing.jpeg" alt=""></div>
+                    <div class="photo-placeholder">
+                        <img src="/static/images/First time outing.jpeg" alt="First Time Outing">
+                    </div>
                     <div class="polaroid-text">Outing First Time</div>
                 </div>
                 <p class="photo-caption">Laughter and joy</p>
@@ -49,7 +57,9 @@
             
             <div class="photo-card" data-index="4">
                 <div class="photo-frame">
-                    <div class="photo-placeholder"><img src="/static/images/Hug.jpeg" alt=""></div>
+                    <div class="photo-placeholder">
+                        <img src="/static/images/Hug.jpeg" alt="Hug">
+                    </div>
                     <div class="polaroid-text">Hug</div>
                 </div>
                 <p class="photo-caption">Celebrating life together</p>
@@ -57,7 +67,9 @@
             
             <div class="photo-card" data-index="5">
                 <div class="photo-frame">
-                    <div class="photo-placeholder"><img src="/static/images/SEbi.jpeg" alt=""></div>
+                    <div class="photo-placeholder">
+                        <img src="/static/images/SEbi.jpeg" alt="Everyday Magic">
+                    </div>
                     <div class="polaroid-text">Everyday Magic</div>
                 </div>
                 <p class="photo-caption">The little things that matter</p>
@@ -65,7 +77,9 @@
             
             <div class="photo-card" data-index="6">
                 <div class="photo-frame">
-                    <div class="photo-placeholder"><img src="/static/images/Kundu chlmm.jpeg" alt=""></div>
+                    <div class="photo-placeholder">
+                        <img src="/static/images/Kundu chlmm.jpeg" alt="My Kundu Pondatti">
+                    </div>
                     <div class="polaroid-text">My Kundu Pondatti</div>
                 </div>
                 <p class="photo-caption">Forever and always</p>
@@ -73,7 +87,9 @@
             
             <div class="photo-card" data-index="7">
                 <div class="photo-frame">
-                    <div class="photo-placeholder"><img src="/static/images/Dream Future.jpeg" alt=""></div>
+                    <div class="photo-placeholder">
+                        <img src="/static/images/Dream Future.jpeg" alt="Future Dreams">
+                    </div>
                     <div class="polaroid-text">Future Dreams Unkuda Eppovum erukanum</div>
                 </div>
                 <p class="photo-caption">The best is yet to come</p>
